--- a/Code/Frontend/package.json
+++ b/Code/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "Frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,16 +11,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0",
-    "@angular/cdk": "^15.0.3",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
-    "@angular/material": "^15.0.3",
+    "@angular/material": "^15.1.2",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@ng-select/ng-select": "^10.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
