--- a/Code/Frontend/package.json
+++ b/Code/Frontend/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@coreui/angular": "^4.3.9",
+    "@coreui/icons-angular": "^4.3.9",
     "@ng-select/ng-select": "^10.0.3",
+    "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
